<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/text_edit"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/edit"
            android:visible="true" />

        <item
            android:id="@+id/text_spellcheck"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/spellcheck"
            android:visible="true" />

        <item
            android:id="@+id/text_open"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/open_text"
            android:visible="true">

            <menu xmlns:android="http://schemas.android.com/apk/res/android">
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/text_open_local"
                        android:checkable="false"
                        android:enabled="true"
                        android:icon="@android:drawable/ic_menu_set_as"
                        android:title="@string/open_local"
                        android:visible="true" />

                    <item
                        android:id="@+id/text_open_cloud"
                        android:checkable="false"
                        android:enabled="true"
                        android:icon="@android:drawable/ic_menu_set_as"
                        android:title="@string/open_cloud"
                        android:visible="true" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/text_save"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/save"
            android:visible="true" />

        <item
            android:id="@+id/text_delete"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            android:visible="true" />
    </group>
</menu>