<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/popup_favourite"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/favourite"
            android:visible="true" />

        <item
            android:id="@+id/popup_crop"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/crop"
            android:visible="true" />

        <item
            android:id="@+id/popup_open"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/open"
            android:visible="true" />

        <item
            android:id="@+id/popup_save"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/save"
            android:visible="true" />

        <item
            android:id="@+id/popup_delete"
            android:checkable="false"
            android:enabled="true"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            android:visible="true" />
    </group>
</menu>