<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_Text"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/new_text"
        android:layout_width="382dp"
        android:layout_height="442dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="false"
        android:contentDescription="@string/text"
        android:gravity="center_vertical"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_new_text"
        android:layout_width="382dp"
        android:layout_height="442dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autoSizeTextType="uniform"
        android:autofillHints="false"
        android:contentDescription="@string/text"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spellcheck_suggestion_1"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="14dp"
        android:contentDescription="@string/spellcheck"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spellcheck_pass" />


    <TextView
        android:id="@+id/spellcheck_suggestion_2"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="11dp"
        android:contentDescription="@string/spellcheck"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/spellcheck_suggestion_1"
        app:layout_constraintTop_toBottomOf="@+id/spellcheck_pass" />

    <TextView
        android:id="@+id/spellcheck_suggestion_3"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="11dp"
        android:contentDescription="@string/spellcheck"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/spellcheck_suggestion_2"
        app:layout_constraintTop_toBottomOf="@+id/spellcheck_pass" />

    <ProgressBar
        android:id="@+id/uploadProgress_text"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/new_text"
        app:layout_constraintEnd_toEndOf="@+id/new_text"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/new_text"
        app:layout_constraintTop_toTopOf="@+id/new_text"
        app:layout_constraintVertical_bias="0.977" />

    <ImageButton
        android:id="@+id/edit_text"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/analyze_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spellcheck_suggestion_1"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/analyze_text"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/analysis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spellcheck_suggestion_1"
        app:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />

    <CheckBox
        android:id="@+id/favourite_star_text"
        style="?android:attr/starStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/new_text"
        app:layout_constraintEnd_toEndOf="@+id/new_text"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="@+id/new_text"
        app:layout_constraintTop_toTopOf="@+id/new_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/spellcheck_pass"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/pass"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uploadProgress_text" />

    <Button
        android:id="@+id/edit_accept"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uploadProgress_text" />

    <Button
        android:id="@+id/spellcheck_cancel"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/spellcheck_pass"
        app:layout_constraintTop_toBottomOf="@+id/uploadProgress_text" />

    <Button
        android:id="@+id/edit_cancel"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/spellcheck_pass"
        app:layout_constraintTop_toBottomOf="@+id/uploadProgress_text" />

</androidx.constraintlayout.widget.ConstraintLayout>